# serializer version: 1
# name: test_diagnostics_redacts_identifiers
  dict({
    'cached_service_info': True,
    'connected': True,
    'data': dict({
      'countdown': 0,
      'current_temp': 150,
      'hold': False,
      'hold_button': False,
      'lifted': False,
      'power': False,
      'target_temp': 195,
      'units': 'F',
    }),
    'disconnects': 0,
    'last_update_success': True,
    'temperature_unit': '°F',
  })
# ---
# name: test_entities_snapshot[binary_sensor][binary_sensor.fellow_stagg_ekg_aa_bb_cc_dd_ee_ff_hold-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.fellow_stagg_ekg_aa_bb_cc_dd_ee_ff_hold',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Hold',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Hold',
    'platform': 'fellow_stagg',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'hold',
    'unique_id': 'AA:BB:CC:DD:EE:FF_hold',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities_snapshot[binary_sensor][binary_sensor.fellow_stagg_ekg_aa_bb_cc_dd_ee_ff_hold-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Fellow Stagg EKG+ AA:BB:CC:DD:EE:FF Hold',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.fellow_stagg_ekg_aa_bb_cc_dd_ee_ff_hold',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_entities_snapshot[binary_sensor][binary_sensor.fellow_stagg_ekg_aa_bb_cc_dd_ee_ff_hold_button-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'binary_sensor.fellow_stagg_ekg_aa_bb_cc_dd_ee_ff_hold_button',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Hold button',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Hold button',
    'platform': 'fellow_stagg',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'hold_button',
    'unique_id': 'AA:BB:CC:DD:EE:FF_hold_button',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities_snapshot[binary_sensor][binary_sensor.fellow_stagg_ekg_aa_bb_cc_dd_ee_ff_hold_button-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Fellow Stagg EKG+ AA:BB:CC:DD:EE:FF Hold button',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.fellow_stagg_ekg_aa_bb_cc_dd_ee_ff_hold_button',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_entities_snapshot[binary_sensor][binary_sensor.fellow_stagg_ekg_aa_bb_cc_dd_ee_ff_on_base-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.fellow_stagg_ekg_aa_bb_cc_dd_ee_ff_on_base',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'On base',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'On base',
    'platform': 'fellow_stagg',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'on_base',
    'unique_id': 'AA:BB:CC:DD:EE:FF_on_base',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities_snapshot[binary_sensor][binary_sensor.fellow_stagg_ekg_aa_bb_cc_dd_ee_ff_on_base-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Fellow Stagg EKG+ AA:BB:CC:DD:EE:FF On base',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.fellow_stagg_ekg_aa_bb_cc_dd_ee_ff_on_base',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_entities_snapshot[number][number.fellow_stagg_ekg_aa_bb_cc_dd_ee_ff_target_temperature-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 212,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 104,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.BOX: 'box'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 1.0,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': None,
    'entity_id': 'number.fellow_stagg_ekg_aa_bb_cc_dd_ee_ff_target_temperature',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Target temperature',
    'options': dict({
    }),
    'original_device_class': <NumberDeviceClass.TEMPERATURE: 'temperature'>,
    'original_icon': None,
    'original_name': 'Target temperature',
    'platform': 'fellow_stagg',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'target_temperature',
    'unique_id': 'AA:BB:CC:DD:EE:FF_target_temp',
    'unit_of_measurement': <UnitOfTemperature.FAHRENHEIT: '°F'>,
  })
# ---
# name: test_entities_snapshot[number][number.fellow_stagg_ekg_aa_bb_cc_dd_ee_ff_target_temperature-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'temperature',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Fellow Stagg EKG+ AA:BB:CC:DD:EE:FF Target temperature',
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 212,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 104,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.BOX: 'box'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 1.0,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfTemperature.FAHRENHEIT: '°F'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.fellow_stagg_ekg_aa_bb_cc_dd_ee_ff_target_temperature',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '195',
  })
# ---
# name: test_entities_snapshot[sensor][sensor.fellow_stagg_ekg_aa_bb_cc_dd_ee_ff_auto_off_countdown-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.fellow_stagg_ekg_aa_bb_cc_dd_ee_ff_auto_off_countdown',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Auto-off countdown',
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 2,
      }),
    }),
    'original_device_class': <SensorDeviceClass.DURATION: 'duration'>,
    'original_icon': None,
    'original_name': 'Auto-off countdown',
    'platform': 'fellow_stagg',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'countdown',
    'unique_id': 'AA:BB:CC:DD:EE:FF_countdown',
    'unit_of_measurement': <UnitOfTime.SECONDS: 's'>,
  })
# ---
# name: test_entities_snapshot[sensor][sensor.fellow_stagg_ekg_aa_bb_cc_dd_ee_ff_auto_off_countdown-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'duration',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Fellow Stagg EKG+ AA:BB:CC:DD:EE:FF Auto-off countdown',
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfTime.SECONDS: 's'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.fellow_stagg_ekg_aa_bb_cc_dd_ee_ff_auto_off_countdown',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '0',
  })
# ---
# name: test_entities_snapshot[sensor][sensor.fellow_stagg_ekg_aa_bb_cc_dd_ee_ff_current_temperature-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.fellow_stagg_ekg_aa_bb_cc_dd_ee_ff_current_temperature',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Current temperature',
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 0,
      }),
    }),
    'original_device_class': <SensorDeviceClass.TEMPERATURE: 'temperature'>,
    'original_icon': None,
    'original_name': 'Current temperature',
    'platform': 'fellow_stagg',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'current_temperature',
    'unique_id': 'AA:BB:CC:DD:EE:FF_current_temp',
    'unit_of_measurement': <UnitOfTemperature.FAHRENHEIT: '°F'>,
  })
# ---
# name: test_entities_snapshot[sensor][sensor.fellow_stagg_ekg_aa_bb_cc_dd_ee_ff_current_temperature-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'temperature',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Fellow Stagg EKG+ AA:BB:CC:DD:EE:FF Current temperature',
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfTemperature.FAHRENHEIT: '°F'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.fellow_stagg_ekg_aa_bb_cc_dd_ee_ff_current_temperature',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '150',
  })
# ---
# name: test_entities_snapshot[switch][switch.fellow_stagg_ekg_aa_bb_cc_dd_ee_ff_power-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': None,
    'entity_id': 'switch.fellow_stagg_ekg_aa_bb_cc_dd_ee_ff_power',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Power',
    'options': dict({
    }),
    'original_device_class': <SwitchDeviceClass.SWITCH: 'switch'>,
    'original_icon': None,
    'original_name': 'Power',
    'platform': 'fellow_stagg',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'power',
    'unique_id': 'AA:BB:CC:DD:EE:FF_power',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities_snapshot[switch][switch.fellow_stagg_ekg_aa_bb_cc_dd_ee_ff_power-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'switch',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Fellow Stagg EKG+ AA:BB:CC:DD:EE:FF Power',
    }),
    'context': <ANY>,
    'entity_id': 'switch.fellow_stagg_ekg_aa_bb_cc_dd_ee_ff_power',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_entities_snapshot[water_heater][water_heater.fellow_stagg_ekg_aa_bb_cc_dd_ee_ff-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <WaterHeaterCapabilityAttribute.MAX_TEMP: 'max_temp'>: 212,
      <WaterHeaterCapabilityAttribute.MIN_TEMP: 'min_temp'>: 104,
      <WaterHeaterCapabilityAttribute.OPERATION_LIST: 'operation_list'>: list([
        'off',
        'electric',
      ]),
      <WaterHeaterCapabilityAttribute.TARGET_TEMP_STEP: 'target_temp_step'>: 1,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'water_heater',
    'entity_category': None,
    'entity_id': 'water_heater.fellow_stagg_ekg_aa_bb_cc_dd_ee_ff',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'fellow_stagg',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <WaterHeaterEntityFeature: 11>,
    'translation_key': None,
    'unique_id': 'AA:BB:CC:DD:EE:FF_water_heater',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities_snapshot[water_heater][water_heater.fellow_stagg_ekg_aa_bb_cc_dd_ee_ff-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <WaterHeaterStateAttribute.CURRENT_TEMPERATURE: 'current_temperature'>: 150,
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Fellow Stagg EKG+ AA:BB:CC:DD:EE:FF',
      <WaterHeaterCapabilityAttribute.MAX_TEMP: 'max_temp'>: 212,
      <WaterHeaterCapabilityAttribute.MIN_TEMP: 'min_temp'>: 104,
      <WaterHeaterCapabilityAttribute.OPERATION_LIST: 'operation_list'>: list([
        'off',
        'electric',
      ]),
      <WaterHeaterStateAttribute.OPERATION_MODE: 'operation_mode'>: 'off',
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <WaterHeaterEntityFeature: 11>,
      <WaterHeaterStateAttribute.TARGET_TEMP_HIGH: 'target_temp_high'>: None,
      <WaterHeaterStateAttribute.TARGET_TEMP_LOW: 'target_temp_low'>: None,
      <WaterHeaterCapabilityAttribute.TARGET_TEMP_STEP: 'target_temp_step'>: 1,
      <WaterHeaterStateAttribute.TEMPERATURE: 'temperature'>: 195,
    }),
    'context': <ANY>,
    'entity_id': 'water_heater.fellow_stagg_ekg_aa_bb_cc_dd_ee_ff',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
